# flashnote

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  compose.yaml  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: desktop-window-config.test.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/application/: capture_service.rs  mod.rs  planning_service.rs  ports.rs
src-tauri/src/domain/: capture.rs  mod.rs  planning.rs
src-tauri/src/infrastructure/: mod.rs  sqlite_capture_repository.rs  sqlite_planning_repository.rs
src-tauri/src/platform/: mod.rs  settings.rs  tray.rs  windows.rs
src/application/: capture-service.test.ts  capture-service.ts  container.ts  planning-service.ts  ports.ts  services-context.tsx
src/capture-bar/: CaptureBar.tsx  collapse-controller.test.ts  collapse-controller.ts
src/domain/: capture.test.ts  capture.ts  planning.test.ts  planning.ts
src/focus-window/: FocusWindow.tsx
src/inbox/: CaptureRow.tsx  InboxPage.tsx  use-captures.ts
src/infrastructure/: browser-adapters.ts  tauri-adapters.ts
src/main-window/: MainWindow.tsx
src/planning/: HistoryPage.tsx  PlansPage.tsx  TodayFocusPage.tsx  use-planning.ts
src/settings/: SettingsPanel.tsx
src/shared/: icons.tsx  idle-collapse-controller.test.ts  idle-collapse-controller.ts
